# aicodewith-cc-switch

./: DEPLOYMENT.md  DEVELOPMENT.md  README.md  USAGE.md  docker-compose.yml  package.json  pnpm-lock.yaml  vite.config.mts
.github/workflows/: build.yml  release.yml  release.yml.backup  simple-release.yml  test.yml
server/: .dockerignore  Cargo.toml  Dockerfile  README.md
server/migrations/: 20251225154000_init.sql
server/src/: main.rs
server/ui/: index.html  package-lock.json  package.json
server/ui/src/: App.tsx  index.css
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: misc.rs
src-tauri/src/services/: management_sync.rs  mod.rs
src/components/providers/: ProviderEmptyState.tsx  ProviderList.tsx
src/components/providers/forms/: ClaudeFormFields.tsx  ProviderForm.tsx
src/components/providers/forms/hooks/: index.ts
src/components/settings/: AboutSection.tsx
src/config/: claudeProviderPresets.ts  codexProviderPresets.ts  geminiProviderPresets.ts  providerPresets.ts
src/hooks/: useProviderActions.ts  useSettings.ts
src/i18n/locales/: en.json  ja.json  zh.json
src/lib/: pan123Update.ts
src/lib/api/: settings.ts
src/utils/: claudePluginSync.ts
变更/2025-12-25_后台管理联动/: 任务清单.md  技术设计.md  提案.md
变更/2025-12-25_后台管理联动/规格变更/: 后台管理联动.md
